--- a/package.json
+++ b/package.json
@@ -8,17 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@genkit-ai/core": "^1.21.0",
+    "@genkit-ai/google-genai": "^1.21.0",
+    "@genkit-ai/googleai": "^1.21.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.76.1",
+    "framer-motion": "^12.23.24",
+    "genkit": "^1.21.0",
+    "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "supabase": "^2.53.6",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "babel-plugin-react-compiler": "1.0.0",
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "babel-plugin-react-compiler": "1.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
